feat: add word history page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body class="bg-black min-h-screen flex items-center justify-center relative">
     <div class="container mx-auto px-4 text-center relative" x-data="app">
         <div class="max-w-2xl mx-auto">
+            <div class="flex justify-end mb-4">
+                <a href="/history.html" class="text-gray-400 hover:text-white transition-colors">
+                    View Word History →
+                </a>
+            </div>
             <div x-show="loading" class="text-white loading">
                 Loading today's words...
             </div>
