--- a/history.html
+++ b/history.html
@@ -88,7 +88,7 @@
                 async fetchWords() {
                     try {
                         console.log('Fetching word history...');
-                        const response = await fetch('/api/words/history');
+                        const response = await fetch('/vocabex/api/words/history');
                         const data = await response.json();
                         console.log('Received data:', data);
                         this.words = data;
