--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
     <div class="container mx-auto px-4 py-8">
         <div class="flex justify-between items-center mb-8">
             <h1 class="text-3xl font-bold text-white">Word History</h1>
-            <a href="/" class="text-gray-400 hover:text-white">← Back to Today's Words</a>
+            <a href="/vocabex" class="text-gray-400 hover:text-white">← Back to Today's Words</a>
         </div>
 
         <div class="flex gap-8">
