--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mx-auto px-4 text-center relative" x-data="app">
         <div class="max-w-2xl mx-auto">
             <div class="flex justify-end mb-4">
-                <a href="/history.html" class="text-gray-400 hover:text-white transition-colors">
+                <a href="/vocabex/history.html" class="text-gray-400 hover:text-white transition-colors">
                     View Word History →
                 </a>
             </div>
